# prob

./: .gitignore  README.md  grouped_regression.ipynb  linear_regression.ipynb  pyproject.toml
bays_nets/: bayes_net_sampling.ipynb
causal/: beyond_cofoudners.ipynb  debiased_ml.ipynb  diff_in_diff.ipynb  evaluating_causal_models.ipynb  grouped_regression.ipynb  instrumental_variables.ipynb  linear_regression.ipynb  matching.ipynb  meta-learners.ipynb  non_complicance_and_late.ipynb  panel_data_and_fixed_effects.ipynb  plug_and_play_estimators.ipynb  propensity.ipynb  synthetic_control.ipynb  the_dangeous_equation.ipynb  why_linear_regression.ipynb
causalAIML/: FWL.ipynb  simulating_neyman_orthog.ipynb
forecasting101/: arima.ipynb
mathematical_statistics/: basic_sim.ipynb
notebooks/: the_dangeous_equation.ipynb
stats2024/: data_loader.py
