[tool.poetry]
name = "prob"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
numpy = "^1.26.3"
scipy = "^1.12.0"
jupyterlab = "^4.0.12"
jax = "^0.4.23"
jaxlib = "^0.4.23"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.1"
graphviz = "^0.20.1"
distrax = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
